--- a/GAME/main.html
+++ b/GAME/main.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8" />
     <title>COOKIE MAYHEM</title>
-    <script src="./phaser.min.js"></script>
+    <script src="./libs/phaser.min.js"></script>
     
     <style type="text/css">
         body {
@@ -15,6 +15,6 @@
 
     <h1> COOKIE MAYHEM DO NOT DO THIS </h1>
 
-    <script src="./phaser3BaseGame.js"> </script>
+    <script src="./src/phaser3BaseGame.js"> </script>
 </body>
 </html>
