--- a/GAME/main.html
+++ b/GAME/main.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <title>COOKIE MAYHEM</title>
     <script src="./libs/phaser.min.js"></script>
-    
+    <script src="./src/scenes/GameScene.js">    </script>
+    <script src="./src/config/config.js">       </script>
+    <script src="./src/phaser3BaseGame.js"> </script>
+
     <style type="text/css">
         body {
             margin: 0;
@@ -15,6 +18,6 @@
 
     <h1> COOKIE MAYHEM DO NOT DO THIS </h1>
 
-    <script src="./src/phaser3BaseGame.js"> </script>
+    
 </body>
 </html>
