Ya se sabe como añadir escenas correctamente

--- a/GAME/main.html
+++ b/GAME/main.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <title>COOKIE MAYHEM</title>
     <script src="./libs/phaser.min.js"></script>
-    <script src="./src/scenes/GameScene.js">    </script>
+    <script src="./src/scenes/GameScene.js"> </script>
+    <script src="./src/scenes/Scene1.js"> </script>
     <script src="./src/config/config.js">       </script>
     <script src="./src/phaser3BaseGame.js"> </script>
+    <script src="./src/scenes/SceneManager.js"> </script>
 
     <style type="text/css">
         body {
