Clase de personaje, movimiento, inicialización y background báisco
+ Clase personaje
+ Escena para cargar el juego
+ Mejorada la escena principal del juego
+ Ahora las variables globales como el personaje van en el js principal (phaser3BaseGame.js)
+ El personaje se mueve
! (FIX) El movimiento del personaje tiene un bug al andar en dos direcciones, por ejemplo si te mueves hacia abajo y te desplazas un instante a la izquierda, mientras que mantengas pulsada la tecla hacia abajo te desplazas en diagonal hacia la izquierda
+ Los objetos phaser que cargas en preload son globales.

--- a/GAME/main.html
+++ b/GAME/main.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8" />
     <title>COOKIE MAYHEM</title>
     <script src="./libs/phaser.min.js"></script>
+    <!-- LOAD NEEDED CLASSES-->
+
+
+    <!-- LOAD SCENES -->
     <script src="./src/scenes/GameScene.js"> </script>
-    <script src="./src/scenes/Scene1.js"> </script>
+    <script src="./src/scenes/LoadingScene.js"> </script>
     <script src="./src/scenes/MainScene.js"> </script>
+    <script src="./src/player/Player.js"> </script>
+    <!-- LOAD GAME -->
     <script src="./src/config/config.js">       </script>
     <script src="./src/phaser3BaseGame.js"> </script>
     <script src="./src/scenes/SceneManager.js"> </script>
