--- a/GAME/main.html
+++ b/GAME/main.html
@@ -16,6 +16,9 @@
     <script src="./src/config/config.js">       </script>
     <script src="./src/phaser3BaseGame.js"> </script>
     <script src="./src/scenes/SceneManager.js"> </script>
+    <script src="./src/enemies/enemy.js"></script>
+    <script src="./src/enemies/chipCookie.js"></script>
+    
 
     <style type="text/css">
         body {
