--- a/GAME/main.html
+++ b/GAME/main.html
@@ -6,7 +6,9 @@
     <script src="./libs/phaser.min.js"></script>
     <!-- LOAD NEEDED CLASSES-->
 
-
+    <script src="./src/enemies/Enemy.js"></script>
+    <script src="./src/enemies/ChipCookie.js"></script>
+    
     <!-- LOAD SCENES -->
     <script src="./src/scenes/GameScene.js"> </script>
     <script src="./src/scenes/LoadingScene.js"> </script>
@@ -16,9 +18,7 @@
     <script src="./src/config/config.js">       </script>
     <script src="./src/phaser3BaseGame.js"> </script>
     <script src="./src/scenes/SceneManager.js"> </script>
-    <script src="./src/enemies/enemy.js"></script>
-    <script src="./src/enemies/chipCookie.js"></script>
-    
+
 
     <style type="text/css">
         body {
