--- a/GAME/main.html
+++ b/GAME/main.html
@@ -11,6 +11,8 @@
     <script src="./src/scenes/GameScene.js"> </script>
     <script src="./src/scenes/LoadingScene.js"> </script>
     <script src="./src/scenes/MainScene.js"> </script>
+    <script src="./src/economía/Economy.js"> </script>
+    <script src="./src/economía/Tienda.js"> </script>
     <script src="./src/player/Player.js"> </script>
     <!-- LOAD GAME -->
     <script src="./src/config/config.js">       </script>
