escena menu principal

--- a/GAME/main.html
+++ b/GAME/main.html
@@ -3,11 +3,13 @@
 <head> 
     <meta charset="UTF-8" />
     <title>COOKIE MAYHEM</title>
+    <link rel="stylesheet" href="fonts.css" type="text/css"/>
     <script src="./libs/phaser.min.js"></script>
     <!-- LOAD NEEDED CLASSES-->
 
 
     <!-- LOAD SCENES -->
+    <script src="./src/scenes/MainMenu.js"> </script>
     <script src="./src/scenes/GameScene.js"> </script>
     <script src="./src/scenes/LoadingScene.js"> </script>
     <script src="./src/scenes/MainScene.js"> </script>
