cargar menú e icono nuevo

--- a/GAME/main.html
+++ b/GAME/main.html
@@ -12,6 +12,7 @@
     <script src="./src/player/Player.js"> </script>
 
     <!-- LOAD SCENES -->
+    <script src="./src/scenes/LoadingMenu.js"> </script>
     <script src="./src/scenes/LoadingScene.js"> </script>
     <script src="./src/scenes/MainMenu.js"> </script>
     <script src="./src/scenes/MainScene.js"> </script>
