--- a/GAME/main.html
+++ b/GAME/main.html
@@ -10,13 +10,13 @@
     <script src="./src/economía/Economy.js"> </script>
     <script src="./src/economía/Tienda.js"> </script>
     <script src="./src/player/Player.js"> </script>
+    <script src="./src/bulletsGroup/baseBulletGroup.js"> </script>
 
     <!-- LOAD SCENES -->
     <script src="./src/scenes/LoadingMenu.js"> </script>
     <script src="./src/scenes/LoadingScene.js"> </script>
     <script src="./src/scenes/MainMenu.js"> </script>
     <script src="./src/scenes/MainScene.js"> </script>
-
 
     <!-- LOAD GAME -->
     <script src="./src/config/config.js">       </script>
