--- a/GAME/main.html
+++ b/GAME/main.html
@@ -3,6 +3,7 @@
 <head> 
     <meta charset="UTF-8" />
     <title>COOKIE MAYHEM</title>
+    <link rel="preload" href="assets/interface/interfaceFont.ttf" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="fonts.css" type="text/css"/>
     <script src="./libs/phaser.min.js"></script>
 
