Enemigos como Extends
+Enemigos como Phaser.Gameobjects.Sprote

--- a/GAME/main.html
+++ b/GAME/main.html
@@ -7,11 +7,12 @@
     <!-- LOAD NEEDED CLASSES-->
 
     <script src="./src/enemies/Enemy.js"></script>
-    <script src="./src/enemies/ChipCookie.js"></script>
-    <script src="./src/enemies/OreoCookie.js"></script>
-    <script src="./src/enemies/FruitCookie.js"></script>
-    <script src="./src/enemies/DinoCookie.js"></script>
-    <script src="./src/enemies/GingerCookie.js"></script>
+    <script src="./src/enemies/chipCookie.js"></script>
+    <script src="./src/enemies/oreoCookie.js"></script>
+    <script src="./src/enemies/fruitCookie.js"></script>
+    <script src="./src/enemies/dinoCookie.js"></script>
+    <script src="./src/enemies/gingerCookie.js"></script>
+
     
     <!-- LOAD SCENES -->
     <script src="./src/scenes/GameScene.js"> </script>
