--- a/GAME/main.html
+++ b/GAME/main.html
@@ -26,6 +26,7 @@
     <script src="./src/scenes/LoadingScene.js"> </script>
     <script src="./src/scenes/MainMenu.js"> </script>
     <script src="./src/scenes/MainScene.js"> </script>
+    <script src="./src/scenes/GameOver.js"> </script>
 
     <!-- LOAD GAME -->
     <script src="./src/config/config.js">       </script>
