--- a/GAME/main.html
+++ b/GAME/main.html
@@ -6,6 +6,7 @@
     <link rel="preload" href="assets/interface/interfaceFont.ttf" as="font" type="font/woff2" crossorigin="anonymous">
     <link rel="stylesheet" href="fonts.css" type="text/css"/>
     <script src="./libs/phaser.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 
     <script src="./src/enemies/chipCookie.js"></script>
     <script src="./src/enemies/oreoCookie.js"></script>
