Chat front end añadido

--- a/GAME/index.html
+++ b/GAME/index.html
@@ -41,5 +41,48 @@
     </style>
 </head>
 <body>
+    <link rel="stylesheet" href="chat.css" type="text/css"/>
+    <div class = "app">
+        <div class = "screen join-screen active">  
+            <div class = "form">
+                <h2> Join Chatroom</h2>
+                <div class = "form-input">
+                    <label>Username</label>
+                    <input type = "text" id = "username"> 
+                </div>
+                <div class="form-input">
+                    <button id = "join-user">Join</button>
+                </div>
+            </div>
+        </div>
+        <div class="screen chat-screen">
+            <div class="header">
+                <div class="logo">Chatroom</div>
+                <button id="exit-chat">Exit</button>
+            </div>
+            <div class="messages">
+              <!-- text messages -->
+                <div class="message my-message">
+                    <div>
+                        <div class="name">You</div>
+                        <div class="text"> Hi </div>
+                    </div>
+                </div>
+                <div class="update">
+                    Abc has joined the conversation
+                </div>
+                <div class="message other-message">
+                    <div>
+                        <div class="name">You</div>
+                        <div class="text"> Hi </div>
+                    </div>
+                </div>
+            </div>
+            <div class="typebox">
+                <input type="text" id = "message-input">
+                <button id = "send-message">Send</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
